Change many files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,7 @@ set(SOURCE_FILES
         pars_data.c
         put_piece.c
         wave_matrix.c
-        ./libft/get_next_line/get_next_line.c
-        ./libft/get_next_line/get_next_line.h
         filler.h)
 
 add_executable(filler ${SOURCE_FILES})
-target_link_libraries(filler ${CMAKE_SOURCE_DIR}/libft/ft_printf/libftprintf.a)
+target_link_libraries(filler ${CMAKE_SOURCE_DIR}/libft/libft.a)
